# fil-srl

./: .env.template  .gitignore  Dockerfile  README.md  fil-srl.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/check-consistency/: check_consistency.py
.github/workflows/: consistency-check.yml
notebooks/: simple-srl.ipynb  unified.py
scripts/: csf.sh
